--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -4,53 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" th:href="@{/css/recipeList.css}">
+    <link rel="stylesheet" th:href="@{/css/custom.css}"> <!--link para verlo con chrome enlace css-->
+    <link rel="stylesheet" href="../static/css/custom.css"> <!-- link verlo previsualizador enlace css-->
     <title>Receta</title>
 </head>
 <body>
-<header>
-    <div class="logo">
-        <div class="nf-logo">
-            <img th:src="@{/images/logo_NFF.png}" alt="NF-Logo" class="nf-logo">
-        </div>
-        <div class="logo&text">
-            <div class="nutrifusion-food">
-                <img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
-            </div>
-            <div class="logo-text">
-                <p>Fusionando Sabor y Nutrición</p>
-            </div>
-        </div>
-    </div>
-    <nav class="navbar">
-        <ul>
-            <li><a href="/home" class="Home">INICIO</a></li>
-            <li><a href="/recipes/categories" class="Category">CATEGORIAS</a></li>
-            <li><a href="/recipes" class="Recipe">RECETAS</a></li>
-            <li><a href="/profile" class="Profile">PERFIL</a></li>
-        </ul>
-    </nav>
-    <div class="signup-button">
-        <button>SIGN UP</button>
-    </div>
-</header>
+<header th:insert="fragments.html :: header">Header</header>
 <h1 th:text="${recipe.name}"></h1>
 
-<!--
-<h3 th:text="${recipe.category}"></h3>
-<p th:text="${recipe.user.name}"></p>
-<ul>
+
+<h3 th:text="${recipe.category.name_es}"></h3>
+
+<!--<ul>
     <li th:each="ingredient : ${recipe.ingredientList}" th:text="ingredient"></li>
 </ul>
 <ul>
     <li th:each="tool : ${recipe.toolList}" th:text="tool"></li>
-</ul>
--->
+</ul>-->
+
 
 <h4>Tiempo</h4>
 <p th:text="${recipe.time}"></p>
 <h4>Alergenos</h4>
 <h4>Nombre Nutricionista</h4>
+<p th:text="${recipe.user.name}"></p>
 <h4>(ICONO CORAZON) Añadir a favoritos</h4>
 <h2>Ingredientes</h2>
 
@@ -59,13 +36,6 @@
 <h2>Preparacion</h2>
 <p th:text="${recipe.description}"></p>
 <br><br><br>
-<footer>
-    <br>
-    <i class="fa-brands fa-facebook"></i>
-    <i class="fa-brands fa-twitter"></i>
-    <i class="fa-brands fa-linkedin"></i>
-    <i class="fa-brands fa-instagram"></i>
-    <p class="footer">©2024 by NutriFusion Food</p>
-</footer>
+<footer th:insert="fragments.html::footer"></footer>
 </body>
 </html>
