--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,20 +10,20 @@
 
 <body>
     <header>
-        <div class="container-fluid p-4 border-primary bg-warning">
-            <div class="logo d-inline">
-                <div class="nf-logo d-inline rounded float-start">
+        <div class="container-fluid p-4 border-primary bg-warning d-flex justify-content-between">
+            <div class="logo d-flex">
+                <div class="nf-logo">
                     <!--   <img src="../static/images/logo_NFF.png" alt="NF-Logo" class="nf-logo">-->
                     <img th:src="@{/images/logo_NFF.png}" alt="NF-Logo" class="nf-logo">
 
                 </div>
-                <div class="logotext d-inline rounded float-start">
-                    <div class="nutrifusion-food d-block">
+                <div class="logotext">
+                    <div class="nutrifusion-food">
                         <!-- <img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food"> -->
                         <img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
 
                     </div>
-                    <div class="slogan d-block">
+                    <div class="slogan">
                         <p>Fusionando Sabor y Nutrición</p>
                     </div>
                 </div>
