--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,57 +13,59 @@
 <body>
 <header th:insert="fragments.html :: header">Header</header>
 <main>
-    <div class="container-fluid bg-secundary">
+    <div class="container-fluid bg-secondary">
         <section class="section-welcome py-5 border-bottom border-primary text-center">
-            <h2 class="welcome-text fs-1 text-info">
+            <h2 class="welcome-text text-info">
                 Bienvenido a
                     <img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food-welcome">
                    <!-- <img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food-welcome">-->
             </h2>
-            <div class="icon pb-3 fs-3">
+            <div class="heart-icon pb-3">
                 <i class="fa-solid fa-heart"></i>
             </div>
     
-            <p class="message fs-3 pt-2">
+            <p class="message pt-2">
                 "This Is a Message from the Blogger, Write Something Inspirational for the Readers to Enjoy"
             </p>
         </section>
     
         <section class="section-categories border-bottom border-primary text-center py-4">
-            <h2 class="categories-text text-info fs-2 fst-italic fw-bold ">CATEGORIAS</h2>
+            <h2 class="categories-text text-info fw-bold ">CATEGORIAS</h2>
             <article class="images px-5 py-3">
                 <div class="recipes d-inline-block  px-4 ">
                    <img th:src="@{/images/recetas.png}" alt="recipes" class="img-recipes d-block pb-3">
                    <!-- <img src="../static/images/recetas.png" alt="recipes" class="img-recipes d-block pb-3"> --> 
-                    <p class="title-recipe fs-3 bg-warning d-inline-block ">Recetas</p>
+                    <p class="title-recipe bg-warning d-inline-block ">Recetas</p>
                 </div>
                 <div class="drinks d-inline-block px-4">
                   <img th:src="@{/images/bebidas.png}" alt="drinks" class="img-drinks d-block pb-3">
-                    <!-- <img src="../static/images/category_3.png" alt="drinks" class="img-drinks d-block pb-3 "> -->
-                    <p class="title-drink fs-3 bg-warning d-inline-block ">Bebidas</p>
+
+                    <!-- <img src="../static/images/bebidas.png" alt="drinks" class="img-drinks d-block pb-3 "> --> 
+                    <p class="title-drink bg-warning d-inline-block ">Bebidas</p>
                 </div>
                 <div class="main-dish d-inline-block  px-4">
                     <img th:src="@{/images/salados.png}" alt="main-dish" class="img-maindish d-block pb-3 ">
-                   <!-- <img src="../static/images/category_1.png" alt="main-dish" class="img-maindish d-block pb-3 "> -->
-                    <p class="title-maindish fs-3 bg-warning d-inline-block ">Salados</p>
+                   <!-- <img src="../static/images/salados.png" alt="main-dish" class="img-maindish d-block pb-3 "> --> 
+                    <p class="title-maindish bg-warning d-inline-block ">Salados</p>
                 </div>
                 <div class="desserts d-inline-block px-4">
                      <img th:src="@{/images/postres.png}" alt="desserts" class="img-desserts d-block pb-3">
-                   <!--  <img src="../static/images/category_2.png" alt="desserts" class="img-desserts d-block pb-3">-->
-                    <p class="title-desserts fs-3 bg-warning d-inline-block ">Postres</p>
+                   <!--  <img src="../static/images/postres.png" alt="desserts" class="img-desserts d-block pb-3">-->
+                    <p class="title-desserts bg-warning d-inline-block ">Postres</p>
                 </div>
                 <div class="snacks d-inline-block  px-4">
                      <img th:src="@{/images/snacks.png}" alt="snacks" class="img-snacks d-block pb-3">
-                   <!--  <img src="../static/images/category_4.png" alt="snacks" class="img-snacks d-block pb-3">-->
-                    <p class="title-snacks fs-3 bg-warning d-inline-block ">Snacks</p>
+                   <!--  <img src="../static/images/snacks.png" alt="snacks" class="img-snacks d-block pb-3">-->
+                    <p class="title-snacks bg-warning d-inline-block ">Snacks</p>
+
                 </div>
             </article>
             <br>
 
         </section>
         <section class="about-us text-center px-2 py-4">
-            <i class="fa-solid fa-mitten fs-3 py-3"></i>
-            <p class="aboutus-text text-info fs-2 pb-2">ACERCA DE NOSOTROS</p>
+            <i class="globe-icon fa-solid fa-mitten py-3"></i>
+            <p class="aboutus-text text-info pb-2">ACERCA DE NOSOTROS</p>
         
             <div class="about-us ">
                 <div class="about-us-image d-inline-block">
@@ -71,8 +73,8 @@
                     <!--  <img src="../static/images/about-us.png" alt="about-us" class="img-aboutus">-->
                 </div>
                 <div class="text d-inline-block mx-5">
-                    <p class="NFF-title fs-3 ">NutriFusion Food</p> <br>
-                    <p class="description-aboutus fs-4 ">We want to propose a site for the cooking fans to find healthy and tasty
+                    <p class="NFF-title">NutriFusion Food</p> <br>
+                    <p class="description-aboutus">We want to propose a site for the cooking fans to find healthy and tasty
                         recipes created
                         by nutritionists. <br>
                         Our name came from our interest of the fusion between food and nutrition. <br>
