--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="container-fluid p-4 border-primary bg-warning d-flex justify-content-between">
+        <div class="container-fluid p-4 border-fuente bg-resalte d-flex justify-content-between">
             <div class="logo d-flex">
                 <div class="nf-logo">
                     <!--   <img src="../static/images/logo_NFF.png" alt="NF-Logo" class="nf-logo">-->
@@ -29,16 +29,16 @@
                 </div>
             </div>
             <nav class="navbar-expand-lg d-inline-block col-md-6">
-                <div class="container-fluid-nav mt-3 px-5 text-center ">
+                <div class="container-fluid-nav mt-3 px-5 text-center">
                     <ul class="navbar px-3">
-                        <li class="nav-item border-top border-primary"><a href="/home"
+                        <li class="nav-item border-top border-fuente fs-4"><a href="/home"
                                 class="nav-link active">INICIO</a></li>
-                        <li class="nav-item border-top border-primary"><a href="/categories"
+                        <li class="nav-item border-top border-fuente fs-4"><a href="/recipes/categories"
                                 class="nav-link active">CATEGORIAS</a></li>
                         <!--
                         <li>
                             <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
+                                <button class="btn btn-fondo dropdown-toggle" type="button" id="dropdownMenu2"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Dropdown
                                 </button>
@@ -51,22 +51,22 @@
                         </li>
                         -->
                         <li>
-                        <a class="nav-link dropdown-toggle border-top border-primary "
+                        <a class="nav-link dropdown-toggle border-top border-fuente fs-1"
                             id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
                             CATEGORIAS
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Todo</a>
-                            <a class="dropdown-item" href="#">Snacks</a>
-                            <a class="dropdown-item" href="#">Bebidas</a>
-                            <a class="dropdown-item" href="#">Salados</a>
-                            <a class="dropdown-item" href="#">Postre</a>
+                            <a class="dropdown-item" href="/recipes">Todo</a>
+                            <a class="dropdown-item" href="/recipes/categories/1">Salado</a>
+                            <a class="dropdown-item" href="/recipes/categories/2">Postre</a>
+                            <a class="dropdown-item" href="/recipes/categories/3">Bebida</a>
+                            <a class="dropdown-item" href="/recipes/categories/4">Postre</a>
                         </div>
                         </li>
-                        <li class="nav-item border-top border-primary"><a href="/recipes"
+                        <li class="nav-item border-top border-fuente fs-1"><a href="/recipes"
                                 class="nav-link active">RECETAS</a></li>
-                        <li class="nav-item border-top border-primary"><a href="/nutritionists"
+                        <li class="nav-item border-top border-fuente fs-2"><a href="/nutritionists"
                                 class="nav-link active">PERFIL</a></li>
                     </ul>
                 </div>
@@ -78,12 +78,12 @@
 
         </div>
 
-        <!-- <hr class="header border border-primary">-->
+        <!-- <hr class="header border border-fuente">-->
     </header>
     <br>
 
     <footer>
-        <div class="container-fluid bg-warning border-top border-primary">
+        <div class="container-fluid bg-resalte border-top border-fuente">
             <div class="icons text-center mt-3">
                 <i class=" fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-twitter"></i>
