--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -23,22 +23,22 @@
         <div class="drinks d-inline-block px-4">
             <img th:src="@{/images/bebidas.png}" alt="drinks" class="img-drinks d-block pb-3">
             <!-- <img src="../static/images/bebidas.png" alt="drinks" class="img-drinks d-block pb-3 "> -->
-            <a href="/recipes/categories/1"><p class="title-drink fs-3 bg-warning d-inline-block ">Bebidas</p></a>
+            <a href="/categories/1/recipes"><p class="title-drink fs-3 bg-warning d-inline-block ">Bebidas</p></a>
         </div>
         <div class="main-dish d-inline-block  px-4">
             <img th:src="@{/images/salados.png}" alt="main-dish" class="img-maindish d-block pb-3 ">
             <!-- <img src="../static/images/salados.png" alt="main-dish" class="img-maindish d-block pb-3 "> -->
-            <a href="/recipes/categories/2"><p class="title-maindish fs-3 bg-warning d-inline-block ">Salados</p></a>
+            <a href="/categories/2/recipes"><p class="title-maindish fs-3 bg-warning d-inline-block ">Salados</p></a>
         </div>
         <div class="desserts d-inline-block px-4">
             <img th:src="@{/images/postres.png}" alt="desserts" class="img-desserts d-block pb-3">
             <!--  <img src="../static/images/postres.png" alt="desserts" class="img-desserts d-block pb-3">-->
-            <a href="/recipes/categories/3"><p class="title-desserts fs-3 bg-warning d-inline-block ">Postres</p></a>
+            <a href="/categories/3/recipes"><p class="title-desserts fs-3 bg-warning d-inline-block ">Postres</p></a>
         </div>
         <div class="snacks d-inline-block  px-4">
             <img th:src="@{/images/snacks.png}" alt="snacks" class="img-snacks d-block pb-3">
             <!--  <img src="../static/images/snacks.png" alt="snacks" class="img-snacks d-block pb-3">-->
-            <a href="/recipes/categories/4"><p class="title-snacks fs-3 bg-warning d-inline-block ">Snacks</p></a>
+            <a href="/categories/4/recipes"><p class="title-snacks fs-3 bg-warning d-inline-block ">Snacks</p></a>
         </div>
     </article>
     <br>
