--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -33,7 +33,7 @@
                     <ul class="navbar px-3">
                         <li class="nav-item border-top border-primary"><a href="/home"
                                 class="nav-link active">INICIO</a></li>
-                        <li class="nav-item border-top border-primary"><a href="/recipes/categories"
+                        <li class="nav-item border-top border-primary"><a href="/categories"
                                 class="nav-link active">CATEGORIAS</a></li>
                         <!--
                         <li>
