ADD thymeleaf for category

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,22 +39,22 @@
                 </div>
                 <div class="drinks d-inline-block px-4">
                   <img th:src="@{/images/bebidas.png}" alt="drinks" class="img-drinks d-block pb-3">
-                    <!-- <img src="../static/images/bebidas.png" alt="drinks" class="img-drinks d-block pb-3 "> --> 
+                    <!-- <img src="../static/images/category_3.png" alt="drinks" class="img-drinks d-block pb-3 "> -->
                     <p class="title-drink fs-3 bg-warning d-inline-block ">Bebidas</p>
                 </div>
                 <div class="main-dish d-inline-block  px-4">
                     <img th:src="@{/images/salados.png}" alt="main-dish" class="img-maindish d-block pb-3 ">
-                   <!-- <img src="../static/images/salados.png" alt="main-dish" class="img-maindish d-block pb-3 "> --> 
+                   <!-- <img src="../static/images/category_1.png" alt="main-dish" class="img-maindish d-block pb-3 "> -->
                     <p class="title-maindish fs-3 bg-warning d-inline-block ">Salados</p>
                 </div>
                 <div class="desserts d-inline-block px-4">
                      <img th:src="@{/images/postres.png}" alt="desserts" class="img-desserts d-block pb-3">
-                   <!--  <img src="../static/images/postres.png" alt="desserts" class="img-desserts d-block pb-3">-->
+                   <!--  <img src="../static/images/category_2.png" alt="desserts" class="img-desserts d-block pb-3">-->
                     <p class="title-desserts fs-3 bg-warning d-inline-block ">Postres</p>
                 </div>
                 <div class="snacks d-inline-block  px-4">
                      <img th:src="@{/images/snacks.png}" alt="snacks" class="img-snacks d-block pb-3">
-                   <!--  <img src="../static/images/snacks.png" alt="snacks" class="img-snacks d-block pb-3">-->
+                   <!--  <img src="../static/images/category_4.png" alt="snacks" class="img-snacks d-block pb-3">-->
                     <p class="title-snacks fs-3 bg-warning d-inline-block ">Snacks</p>
                 </div>
             </article>
