--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -17,32 +17,15 @@
     <article class="images px-5 py-3">
         <div class="recipes d-inline-block  px-4 ">
             <img th:src="@{/images/recetas.png}" alt="recipes" class="img-recipes d-block pb-3">
-            <!-- <img src="../static/images/recetas.png" alt="recipes" class="img-recipes d-block pb-3"> -->
-            <a href="/recipes"><p class="title-recipe fs-3 bg-warning d-inline-block ">Recetas</p></a>
+            <a href="/recipes"><h2 class="title-recipe fs-3 bg-warning d-inline-block ">Recetas</h2></a>
         </div>
-        <div class="drinks d-inline-block px-4">
-            <img th:src="@{/images/bebidas.png}" alt="drinks" class="img-drinks d-block pb-3">
-            <!-- <img src="../static/images/bebidas.png" alt="drinks" class="img-drinks d-block pb-3 "> -->
-            <a href="/categories/1/recipes"><p class="title-drink fs-3 bg-warning d-inline-block ">Bebidas</p></a>
-        </div>
-        <div class="main-dish d-inline-block  px-4">
-            <img th:src="@{/images/salados.png}" alt="main-dish" class="img-maindish d-block pb-3 ">
-            <!-- <img src="../static/images/salados.png" alt="main-dish" class="img-maindish d-block pb-3 "> -->
-            <a href="/categories/2/recipes"><p class="title-maindish fs-3 bg-warning d-inline-block ">Salados</p></a>
-        </div>
-        <div class="desserts d-inline-block px-4">
-            <img th:src="@{/images/postres.png}" alt="desserts" class="img-desserts d-block pb-3">
-            <!--  <img src="../static/images/postres.png" alt="desserts" class="img-desserts d-block pb-3">-->
-            <a href="/categories/3/recipes"><p class="title-desserts fs-3 bg-warning d-inline-block ">Postres</p></a>
-        </div>
-        <div class="snacks d-inline-block  px-4">
-            <img th:src="@{/images/snacks.png}" alt="snacks" class="img-snacks d-block pb-3">
-            <!--  <img src="../static/images/snacks.png" alt="snacks" class="img-snacks d-block pb-3">-->
-            <a href="/categories/4/recipes"><p class="title-snacks fs-3 bg-warning d-inline-block ">Snacks</p></a>
-        </div>
+       <div>
+           <a th:each="category :${categoryList}" th:href="@{${'/categories/' + category.id + '/recipes'}}">
+               <img th:src="@{/images/} + category_ + ${category.id} + .png">
+               <h2 th:text="${category.name_es}"></h2>
+           </a>
+       </div>
     </article>
-    <br>
-
 </section>
 <footer th:insert="fragments.html::footer"></footer>
 </body>
